# oauth-user-management

./: .env.example  .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  TODOs.md  docker-compose.yml  hydra_login_consent_spec.md  service_account_ui_spec.md  setup.sh  test_oauth_flow.js
auth-backend/: .env.example  .flake8  Dockerfile  db_status.py  dev.sh  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt  run_dev.py  run_tests.sh
auth-backend/migrations/versions/: 003_add_service_accounts.py  004_add_service_account_type.py  005_add_scopes_table.py  006_remove_scope_column copy.py  006_remove_scope_column.py  007_create_default_scopes_and_clients.py
auth-backend/sql/init/: 01-init.sql
auth-backend/src/: main.py
auth-backend/src/api/: __init__.py
auth-backend/src/api/v1/: __init__.py  admin.py  auth.py  roles.py  scopes.py  service_accounts.py  sync.py  users.py
auth-backend/src/core/: config.py  database.py  exceptions.py  logging_config.py  rate_limiting.py
auth-backend/src/middleware/: auth.py
auth-backend/src/models/: __init__.py  audit_log.py  role.py  scope.py  service_account.py  service_account_roles.py  service_account_scopes.py  user.py  user_roles.py
auth-backend/src/repositories/: __init__.py  audit_log.py  base.py  role.py  service_account.py  user.py
auth-backend/src/schemas/: __init__.py  audit.py  common.py  role.py  scope.py  service_account.py  user.py
auth-backend/src/services/: __init__.py  admin_service.py  auth_service.py  hydra_client.py  hydra_sync_service.py  role_service.py  scope_service.py  service_account_service.py  user_service.py
auth-backend/src/templates/: consent.html  login.html  logout.html
auth-backend/tests/: __init__.py  conftest.py
auth-backend/tests/helpers/: test_utils.py
auth-backend/tests/unit/: test_service_account_service.py
auth-backend/tests/unit/models/: test_association_tables.py  test_audit_log.py  test_role.py  test_scope.py  test_service_account.py  test_user.py
auth-backend/tests/unit/repositories/: test_audit_log.py  test_base.py  test_role.py  test_service_account.py  test_user.py
auth-backend/tests/unit/services/: test_admin_service.py  test_auth_service.py  test_hydra_client.py  test_role_service.py  test_service_account_service.py  test_user_service.py
hydra/: hydra.yml
management-ui/: Dockerfile  package-lock.json  package.json
management-ui/public/: index.html  manifest.json
management-ui/src/: App.tsx
management-ui/src/components/Layout/: Layout.tsx
management-ui/src/components/auth/: AuthCallback.tsx  ProtectedRoute.tsx
management-ui/src/contexts/: AuthContext.tsx  NavigationContext.tsx
management-ui/src/hooks/: usePageTracking.ts
management-ui/src/pages/: AuditLogs.tsx  Dashboard.tsx  NotFound.tsx  RoleDetail.tsx  RoleEdit.tsx  Roles.tsx  Scopes.tsx  ServiceAccountDetail.tsx  ServiceAccountEdit.tsx  ServiceAccounts.tsx  UserDetail.tsx  UserEdit.tsx  Users.tsx  index.ts
management-ui/src/services/: api.ts  authService.ts  hooks.ts  mockApi.ts  syncService.ts
scripts/: README.md  cleanup.sh  generate-db-init.sh  generate-keys.sh  setup.sh  test-oauth2-flow.sh
